--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #EAF6F6
+    background-color: #eeeeee
 }
 
 h1 {
@@ -7,6 +7,10 @@ h1 {
 }
 
 h3 {
+    color: #66BFBF
+}
+
+h4 {
     color: #66BFBF
 }
 
